@@ -16,6 +16,7 @@ export(oncostrip)
 export(oncotate)
 export(pfamDomains)
 export(plotCBSsegments)
+export(plotClusters)
 export(plotOncodrive)
 export(plotSignatures)
 export(plotTiTv)
