@@ -6,8 +6,7 @@
 \usage{
 inferHeterogeneity(maf, tsb = NULL, top = 5, vafCol = NULL,
   dirichlet = FALSE, segFile = NULL, ignChr = NULL, minVaf = 0,
-  maxVaf = 1, plot = TRUE, genes = NULL, savePlot = FALSE, width = 6,
-  height = 5)
+  maxVaf = 1)
 }
 \arguments{
 \item{maf}{an MAF object generated by \code{\link{read.maf}}}
@@ -27,16 +26,6 @@ inferHeterogeneity(maf, tsb = NULL, top = 5, vafCol = NULL,
 \item{minVaf}{filter low frequency variants. Low vaf variants maybe due to sequencing error. Default 0. (on the scale of 0 to 1)}
 
 \item{maxVaf}{filter high frequency variants. High vaf variants maybe due to copy number alterations or impure tumor. Default 1. (on the scale of 0 to 1)}
-
-\item{plot}{logical plots density curve and clusters.}
-
-\item{genes}{genes to highlight on the plot. Default NULL.}
-
-\item{savePlot}{If TRUE saves plot to output pdf}
-
-\item{width}{plot width. Default 6.}
-
-\item{height}{plot height. Default 5.}
 }
 \value{
 list of clustering tables.
@@ -53,7 +42,7 @@ for clustering. Default using parametric finite mixture models and another metho
 \examples{
 laml.maf <- system.file("extdata", "tcga_laml.maf.gz", package = "maftools")
 laml <- read.maf(maf = laml.maf, removeSilent = TRUE, useAll = FALSE)
-inferHeterogeneity(maf = laml, tsb = 'TCGA.AB.2972', vafCol = 'i_TumorVAF_WU')
+TCGA.AB.2972.clust <- inferHeterogeneity(maf = laml, tsb = 'TCGA.AB.2972', vafCol = 'i_TumorVAF_WU')
 
 }
 \references{
@@ -63,5 +52,8 @@ Statistical Association 97:611-631
 Jara A, Hanson TE, Quintana FA, Muller P, Rosner GL. DPpackage: Bayesian Semi- and Nonparametric Modeling in R. Journal of statistical software. 2011;40(5):1-30.
 
 Olshen AB, Venkatraman ES, Lucito R, Wigler M. Circular binary segmentation for the analysis of array-based DNA copy number data. Biostatistics. 2004;5(4):557-72.
+}
+\seealso{
+\code{\link{plotClusters}}
 }
 
